# corevo

./: CLAUDE.md  Cargo.toml  README.md  mongo-query.json  paseo_collectives_metadata.scale
.claude/: settings.local.json
.github/workflows/: ci.yml
corevo-lib/: Cargo.toml
corevo-lib/src/: chain.rs  config.rs  crypto.rs  error.rs  indexer.rs  lib.rs  primitives.rs
corevo-lib/tests/: integration_test.rs
corevo-tui/: Cargo.toml
corevo-tui/src/: action.rs  app.rs  event.rs  main.rs  tui.rs
corevo-tui/src/components/: config.rs  history.rs  home.rs  mod.rs  propose.rs  voting.rs
src/: chain_helpers.rs  indexer.rs  main.rs  primitives.rs
